# sumaq

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
src/: helper_functions.py
src/psp/: Pauli_operations.py  __init__.py  helper_functions.py  pauli_operations.py
src/sumaq/: bosonic.py  fermionic.py  helper_functions.py  pauli.py  pauli_operations.py
src/sumaq/hamiltonian/: built_in.py  operators.py
src/sumaq/response_function/: greens_function.py  spectral_analysis.py
tests/: test_helper_functions.py  test_placeholder.py
